--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section id="santé">
             <header><h2><img src="./img/icone/heart.png" class="icone"> Santé</h2></header>
             <div class="half">
-                <div class="half-txt">
+                <div class="half-txt nutrition">
                     <header><h3>Valeurs nutritives</h3></header>
                     <div class="tableau">
                         <div>
