--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Yuka</title>
+        <title>Myuka</title>
 
         
 
@@ -29,7 +29,7 @@
                 <div class="row">
         -->
                     <nav class="navbar navbar-expand-lg mint-bg navbar-dark fixed-top">
-                        <a class="navbar-brand" href="index_copy.html">
+                        <a class="navbar-brand" href="index.html">
                             <img src="./img/logo.png" width=auto height="50" alt="logo" padding=none class="logo">
                             MYUKA
                         </a>
@@ -40,7 +40,7 @@
                         <div id="navbarContent" class="collapse navbar-collapse">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                   <a class="nav-link" href="index_copy.html">Accueil</a>
+                                   <a class="nav-link" href="index.html">Accueil</a>
                                 </li>
                                 <li class="nav-item">
                                    <a class="nav-link" href="#produit">Produit</a>
